teams/team-jose/qa/templates/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 321852949023.dkr.ecr.us-east-1.amazonaws.com/simple-crud-frontend-app:latest
        ports:
        - containerPort: 80
