teams/team-jose/qa/templates/deployment-tasks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
      - name: tasks
        image: jamorosocaylent/bb-backend-crud-app:0.0.2
        ports:
        - containerPort: 8080
